--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj numer telefonu:</label>
-                <input type="number" class="form-control"  placeholder="nr telefonu" id="phone">
+                <input type="number" class="form-control"  placeholder="nr telefonu" id="phone-number">
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj kod pocztowy:</label>
-                <input type="number" class="form-control"  placeholder="kod pocztowy" id="postcode">
+                <input type="text" class="form-control"  placeholder="kod pocztowy" id="post-code">
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Wybierz miejscowość:</label>
@@ -48,11 +48,11 @@
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj numer domu:</label>
-                <input type="text" class="form-control"  placeholder="numer domu" id="housenr">
+                <input type="text" class="form-control"  placeholder="numer domu" id="house-number">
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj numer miedzkania:</label>
-                <input type="number" class="form-control"  placeholder="numer mieszkania" id="apartamentnr">
+                <input type="number" class="form-control"  placeholder="numer mieszkania" id="apartament-number">
             </div>
             <div class="form-row">
                 <button class="form-button" type="submit">Wyślij</button>
