--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             </div>
         </form>
     </section>
+    <section class="send">
+        <h1>Fotmulaż wysłany pomyślnie</h1>
+        <div class="go-back"></div>
+    </section>
 
     <script src="./js/app.js"></script>
 </body>
