tel validation changed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj numer telefonu:</label>
-                <input type="number" class="form-control"  placeholder="nr telefonu" id="phone-number">
+                <input type="tel" class="form-control"  placeholder="nr telefonu" id="phone-number">
             </div>
             <div class="form-row">
                 <label class="form-label" for="surname">Podaj kod pocztowy:</label>
@@ -57,7 +57,7 @@
             </div>
         </form>
     </section>
-    
+
     <section class="send">
         <h1>Fotmulaż wysłany pomyślnie</h1>
         <div class="go-back"></div>
